@@ -39,13 +39,16 @@ test_small (void)
     const char *decimal;
   } data[] = {
     { "183407", "183407" },
-    { " 763959", "763959" },
+    { " 763959", "763959 " },
     { "9 81999", "981999" },
-    { "10\t7398", "107398" },
+    { "10\t7398 ", "107398" },
     { "-9585 44", "-00958544" },
     { "-0", "0000" },
     { " -000  ", "0" },
     { "0704436", "231710" },
+    /* Check the case of large number of leading zeros. */
+    { "0000000000000000000000000", "0000000000000000000000000" },
+    { "000000000000000000000000704436", "000000000000000000000000231710" },
     { " 02503517", "689999" },
     { "0 1312143", "365667" },
     { "-03 274062", "-882738" },
@@ -71,6 +74,10 @@ test_small (void)
     { "0X7fc47", "523335" },
     { "0X8167c", "530044" },
     /* Some invalid inputs */
+    { "", NULL },
+    { "0x", NULL },
+    { "0b", NULL },
+    { "0z", NULL },
     { "0ab", NULL },
     { "10x0", NULL },
     { "0xxab", NULL },
